--- a/assets/mobile_style.css
+++ b/assets/mobile_style.css
@@ -1,57 +1,128 @@
 /********** HEADER **********/
-
 body {
-    width: 375px;
-    margin: 0;
-  }
-  
-  header h1 {
-    font-family: Shrikhand;
-    font-size: 30px;
-    font-weight: 400;
-    color: #101010;
-    margin: 0;
-  }
-  header i {
-    font-size: 16px;
-    color: #353535;
-  }
-  header input {
-    font-weight: 500;
-    font-size: 16px;
-    color: #353535;
-    background-color: transparent;
-    border: none;
-  }
-  header input::placeholder {
-    font-size: 16px;
-    color: #353535;
-  }
-  header input#city {
-    width: 109px;
-  }
-  header .header__form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 17px;
-    height: 50px;
-    width: 100%;
-    background-color: #eaeaea;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  header .header__title {
-    height: 63px;
-    width: 100%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-  }
+  width: 375px;
+  margin: 0;
+}
+
+header h1 {
+  font-family: Shrikhand;
+  font-size: 30px;
+  font-weight: 400;
+  color: #101010;
+  margin: 0;
+}
+header i {
+  font-size: 16px;
+  color: #353535;
+}
+header input {
+  font-weight: 500;
+  font-size: 16px;
+  color: #353535;
+  background-color: transparent;
+  border: none;
+}
+header input::placeholder {
+  font-size: 16px;
+  color: #353535;
+}
+header input#city {
+  width: 109px;
+}
+header .header__form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 17px;
+  height: 50px;
+  width: 100%;
+  background-color: #eaeaea;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+header .header__title {
+  height: 63px;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
 
 /********** FIN HEADER **********/
-
 /********** SECTION EXPLORER **********/
+h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: black;
+}
 
+.explorer {
+  background-color: red;
+  height: 287px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.explorer__title {
+  text-align: center;
+  width: 275px;
+  height: 68px;
+  margin-bottom: 0;
+  margin-top: 39px;
+}
+.explorer__p {
+  font-size: 18px;
+  font-weight: 300;
+  text-align: center;
+  width: 315px;
+  height: 46px;
+  margin: 0;
+}
+.explorer__button {
+  margin-top: 27px;
+  width: 218px;
+  height: 50px;
+  border: 0;
+  border-radius: 25px;
+  background: linear-gradient(to bottom, var(--secondary-color), var(--primary-color));
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  transition: filter 0.3s ease;
+}
+.explorer__button:hover {
+  filter: brightness(1.15);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+}
+
+/********** FIN SECTION EXPLORER **********/
+/********** SECTION FONCTIONNEMENT **********/
+.fonctionnement {
+  height: 440px;
+  background-color: green;
+}
+.fonctionnement__title {
+  padding-left: 20px;
+  padding-top: 48px;
+  padding-bottom: 26px;
+  margin: 0;
+}
+.fonctionnement ol {
+  display: flex;
+  flex-direction: column;
+  gap: 24.93px;
+  line-height: 72.38px;
+  margin: 0;
+}
+.fonctionnement li {
+  width: 335px;
+}
+.fonctionnement__button {
+  width: 322.49px;
+  height: 100%;
+}
+
+/*# sourceMappingURL=mobile_style.css.map */
