--- a/sass/mobile_style.sass
+++ b/sass/mobile_style.sass
@@ -25,26 +25,92 @@ header
       color: #353535
     &#city
       width: 109px
-  .header__form
-    display: flex
-    justify-content: center
-    align-items: center
-    gap: 17px
-    height: 50px
-    width: 100%
-    background-color: #eaeaea
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-  .header__title
-    height: 63px
-    width: 100%
-    background-color: white
-    display: flex
-    align-items: center
-    justify-content: center
-    position: relative
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
+  .header
+    &__form
+      display: flex
+      justify-content: center
+      align-items: center
+      gap: 17px
+      height: 50px
+      width: 100%
+      background-color: #eaeaea
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    &__title
+      height: 63px
+      width: 100%
+      background-color: white
+      display: flex
+      align-items: center
+      justify-content: center
+      position: relative
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
 
 /********** FIN HEADER **********/
 
 /********** SECTION EXPLORER **********/
 
+h2
+  font-size: 24px
+  font-weight: 700
+  color: black
+
+.explorer
+  //background-color: #f6f6f6
+  background-color: red
+  height: calc(400px - 113px)
+  display: flex
+  flex-direction: column
+  align-items: center
+  &__title
+    text-align: center
+    width: 275px
+    height: 68px
+    margin-bottom: 0
+    margin-top: calc(152px - 113px)
+  &__p
+    font-size: 18px
+    font-weight: 300
+    text-align: center
+    width: 315px
+    height: 46px
+    margin: 0
+  &__button
+    margin-top: calc(293px - 152px - 68px - 46px)
+    width: 218px
+    height: 50px
+    border: 0
+    border-radius: 25px
+    background: linear-gradient(to bottom, var(--secondary-color), var(--primary-color))
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25)
+    color: white
+    font-size: 16px
+    font-weight: 500
+    transition: filter 0.3s ease
+    &:hover
+      filter: brightness(1.15)
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35)
+
+/********** FIN SECTION EXPLORER **********/
+
+/********** SECTION FONCTIONNEMENT **********/
+
+.fonctionnement
+  height: 440px
+  //background-color: white
+  background-color: green
+  &__title
+    padding-left: 20px
+    padding-top: calc( 448px - 400px)
+    padding-bottom: 26px
+    margin: 0
+  ol
+    display: flex
+    flex-direction: column
+    gap: 24.93px
+    line-height: 72.38px
+    margin: 0
+  li
+    width: 335px
+  &__button
+    width: 322.49px
+    height: 100%
