--- a/assets/mobile_style.css
+++ b/assets/mobile_style.css
@@ -59,7 +59,7 @@ h2 {
 }
 
 .explorer {
-  background-color: red;
+  background-color: #f6f6f6;
   height: 287px;
   display: flex;
   flex-direction: column;
@@ -84,7 +84,7 @@ h2 {
   margin-top: 27px;
   width: 218px;
   height: 50px;
-  border: 0;
+  border: none;
   border-radius: 25px;
   background: linear-gradient(to bottom, var(--secondary-color), var(--primary-color));
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -100,29 +100,108 @@ h2 {
 
 /********** FIN SECTION EXPLORER **********/
 /********** SECTION FONCTIONNEMENT **********/
+.section__title {
+  padding-left: 20px;
+  margin: 0;
+}
+
 .fonctionnement {
   height: 440px;
   background-color: green;
 }
 .fonctionnement__title {
-  padding-left: 20px;
   padding-top: 48px;
   padding-bottom: 26px;
-  margin: 0;
 }
 .fonctionnement ol {
   display: flex;
   flex-direction: column;
   gap: 24.93px;
-  line-height: 72.38px;
   margin: 0;
+  list-style: none;
+  counter-reset: li;
+  padding-left: 32px;
 }
 .fonctionnement li {
   width: 335px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  counter-increment: li;
+  position: relative;
+}
+.fonctionnement li::before {
+  content: counter(li);
+  color: white;
+  font-size: 14.18px;
+  font-weight: 500;
+  background-color: var(--primary-color);
+  width: 24px;
+  height: 24px;
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: -12px;
 }
 .fonctionnement__button {
   width: 322.49px;
-  height: 100%;
+  height: 72.38px;
+  border: none;
+  border-radius: 20px;
+  background-color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  padding-left: 33.47px;
+  gap: 27px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  font-size: 16px;
+  font-weight: 500;
+  color: black;
+}
+.fonctionnement__button i {
+  color: #7E7E7E;
+}
+.fonctionnement__button .fa-mobile-screen-button {
+  font-size: 19.9px;
+}
+.fonctionnement__button .fa-list-ul {
+  font-size: 15.92px;
+}
+.fonctionnement__button .fa-store {
+  color: var(--primary-color);
+  font-size: 17.91px;
+}
+
+/********** FIN SECTION FONCTIONNEMENT **********/
+/********** SECTION RESTAURANT **********/
+.restaurants {
+  height: 1226px;
+  background-color: red;
+}
+.restaurants__title {
+  padding-top: 54px;
+  padding-bottom: 24px;
+}
+.restaurants .restaurants__allcards {
+  width: 340px;
+  gap: 18px;
+}
+.restaurants .restaurants__allcards .restaurants__singlecard {
+  height: 251px;
+  border: none;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+}
+.restaurants .restaurants__allcards .restaurants__singlecard .restaurants__img {
+  width: 100%;
+  height: 174px;
+}
+.restaurants .restaurants__allcards .restaurants__singlecard .restaurants__new {
+  z-index: 1;
 }
 
 /*# sourceMappingURL=mobile_style.css.map */
