--- a/sass/mobile_style.sass
+++ b/sass/mobile_style.sass
@@ -211,6 +211,11 @@ header
     border-radius: 15px
     display: flex
     flex-direction: column
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.10)
+  
+  &__link--visited:visited
+    .restaurants__tag
+      display: none
     
   &__img
     width: 100%
@@ -219,9 +224,35 @@ header
     border-top-right-radius: 15px
     object-fit: cover
     object-position: bottom
+    position: relative
 
     &--position
       object-position: 39% 61%
+  
+  &__tag
+    width: 80px
+    height: 29px
+    background-color: var(--tertiary-color)
+    border-radius: 2px
+    border: none
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
+    position: absolute
+    margin-top: calc(-132px - 29px)
+    right: calc((80px / 2) - 12px)
+
+    p
+      font-size: 14px
+      font-weight: 500
+      color: #008766
+      text-align: center
+      margin: 0
+      padding-top: calc((29px - 16.80px) / 2)
+
+  .restaurants__allcards:has(.restaurants__link--1:active) .restaurants__tag--1,
+  .restaurants__allcards:has(.restaurants__link--2:active) .restaurants__tag--2,
+  .restaurants__allcards:has(.restaurants__link--3:active) .restaurants__tag--3,
+  .restaurants__allcards:has(.restaurants__link--4:active) .restaurants__tag--4
+    display: none
 
   &__details
     height: 77px
@@ -250,9 +281,46 @@ header
     margin: 0
 
   &__favorite
+    position: relative
+    width: 22px
+    height: 21px
     padding-top: calc(77px - 33px - 21px)
     padding-right: 25px
     padding-bottom: 33px
+    transition: 0.3s
+
+  &__checkbox
+    position: absolute
+    opacity: 0
+    z-index: 1
+    cursor: pointer
+
+    &:checked~.restaurants__svg .restaurants__svg--empty
+      display: none
+        
+    &:checked~.restaurants__svg .restaurants__svg--full
+      display: block
+    
+  &__svg
+    height: 100%
+    
+  &__svg--full
+    animation: svg__keyframes--full 1s
+    display: none
+
+    #restaurants__svg--gradient
+      rotate: 90deg
+    
+@keyframes svg__keyframes--full
+  0%
+    transform: scale(0)
+          
+  25%
+    transform: scale(1.2)
+          
+  50%
+    transform: scale(1)
+    filter: brightness(1.5)
 
 /********** FIN SECTION RESTAURANTS **********/
 
