--- a/assets/mobile_style.css
+++ b/assets/mobile_style.css
@@ -46,6 +46,7 @@ header .header__maintitle {
   justify-content: center;
   position: relative;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  z-index: 1;
 }
 header .header__title {
   font-family: Shrikhand;
@@ -63,6 +64,7 @@ header .header__form {
   width: 100%;
   background-color: #eaeaea;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 
 /********** FIN HEADER **********/
