--- a/sass/mobile_style.sass
+++ b/sass/mobile_style.sass
@@ -48,6 +48,7 @@ header
       justify-content: center
       position: relative
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
+      z-index: 1
 
     &__title
       font-family: Shrikhand
@@ -65,6 +66,7 @@ header
       width: 100%
       background-color: #eaeaea
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+      position: relative
 
 /********** FIN HEADER **********/
 
