--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -240,7 +240,7 @@ header
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
     position: absolute
     margin-top: calc(-132px - 29px)
-    right: calc((80px / 2) - 12px)
+    left: 265px
 
     p
       font-size: 14px
@@ -383,3 +383,5 @@ footer
 
       a
         font-size: 16px
+
+/********** FIN FOOTER **********/
