--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -240,7 +240,7 @@ header
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
     position: absolute
     margin-top: calc(-132px - 29px)
-    left: 265px
+    margin-left: 248px
 
     p
       font-size: 14px
@@ -310,7 +310,10 @@ header
     animation: svg__keyframes--full 1s
     display: none
 
-    #restaurants__svg--gradient
+    #restaurants__svg--gradient1,
+    #restaurants__svg--gradient2,
+    #restaurants__svg--gradient3,
+    #restaurants__svg--gradient4
       rotate: 90deg
     
 @keyframes svg__keyframes--full
