--- a/assets/mobile_menupage_style.css
+++ b/assets/mobile_menupage_style.css
@@ -98,6 +98,13 @@ header .header__title {
 .restaurant__svg--full #restaurant__svg--gradient {
   rotate: 90deg;
 }
+.restaurant__setmenu {
+  width: 349px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  position: relative;
+}
 .restaurant__menutitle {
   width: 275px;
   height: 27px;
@@ -116,8 +123,11 @@ header .header__title {
   top: 24px;
 }
 .restaurant__card {
-  height: 69px;
+  display: flex;
   border-radius: 15.04px;
+}
+.restaurant__card--unselected {
+  height: 69px;
   background: white;
   box-shadow: 0 4.01px 15.04px rgba(0, 0, 0, 0.1);
   padding-left: 15px;
@@ -126,6 +136,17 @@ header .header__title {
   flex-direction: column;
   gap: 5px;
   justify-content: center;
+}
+.restaurant__card--selected {
+  width: 59px;
+  background: var(--tertiary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.restaurant__card--selected .fa-circle-check {
+  font-size: 20px;
+  color: white;
 }
 .restaurant__card:active {
   box-shadow: none;
@@ -150,13 +171,6 @@ header .header__title {
 }
 .restaurant__dishdetail--bold {
   font-weight: 700;
-}
-.restaurant__setmenu {
-  width: 349px;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  position: relative;
 }
 .restaurant__button {
   width: 218px;
