--- a/sass/mobile_menupage_style.sass
+++ b/sass/mobile_menupage_style.sass
@@ -101,6 +101,13 @@ header
     #restaurant__svg--gradient
       rotate: 90deg
   
+  &__setmenu
+    width: 349px
+    display: flex
+    flex-direction: column
+    gap: 12px
+    position: relative
+  
   &__menutitle
     width: 275px
     height: 27px
@@ -119,16 +126,30 @@ header
       top: calc(27px - 3px)
   
   &__card
-    height: 69px
-    border-radius: 15.04px
-    background: white
-    box-shadow: 0 4.01px 15.04px rgba(0, 0, 0, 0.10)
-    padding-left: 15px
-    padding-right: 15px
     display: flex
-    flex-direction: column
-    gap: 5px
-    justify-content: center
+    border-radius: 15.04px
+
+    &--unselected
+      height: 69px
+      background: white
+      box-shadow: 0 4.01px 15.04px rgba(0, 0, 0, 0.10)
+      padding-left: 15px
+      padding-right: 15px
+      display: flex
+      flex-direction: column
+      gap: 5px
+      justify-content: center
+
+    &--selected
+      width: 59px
+      background: var(--tertiary-color)
+      display: flex
+      justify-content: center
+      align-items: center
+
+      .fa-circle-check
+        font-size: 20px
+        color: white
 
     &:active
       box-shadow: none
@@ -154,13 +175,6 @@ header
 
     &--bold
       font-weight: 700
-  
-  &__setmenu
-    width: 349px
-    display: flex
-    flex-direction: column
-    gap: 12px
-    position: relative
   
   &__button
     width: 218px
